[package]
name = "tglc-bot"
version = "0.1.0"
edition = "2021"
authors = ["Prathamesh Anwekar <pratham.2118@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http'] }
worker-macros = { version = "0.8", features = ['http'] }
http = "1.3"
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }
html2text = "0.17.1"
